--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -124,6 +124,7 @@
             width: 50%;
             width: 370px;
             line-height: 1.8;
+            text-align: left;
         }
 
         .mark {
