--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -178,15 +178,18 @@
         .wrap {
             padding: 20px;
             transition: .5s;
-
+            cursor: pointer;
         }
 
         .wrap:hover {
             opacity: 0.6;
+            text-decoration: none;
+
         }
 
         .wrap img {
             width: 100%;
+            height: 150px;
         }
 
         .year {
@@ -251,6 +254,22 @@
             padding: 10px 0;
             font-size: 12px;
 
+        }
+
+        figcaption {
+            color: rgb(15, 28, 56);
+            text-decoration: none;
+            transition: .6s;
+        }
+
+        .wrap:hover a {
+            color: #f6b804;
+            text-decoration: none;
+        }
+
+        .wrap:hover figcaption {
+            color: #f6b804;
+            text-decoration: none;
         }
 
 
@@ -441,50 +460,42 @@
                 <div class="row">
                     <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
-                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
-                        <div class="wrap">
-                            <img src="https://fakeimg.pl/350x300/">
-                        </div>
-                    </div>
 
+                            <figure><img src="images/chademy.png" alt=""></figure>
+                            <figcaption>chademy 椅子學院</figcaption>
+
+
+                        </div>
+                    </div>
                     <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
+
+                        <div class="wrap">
+                            <a
+                                href="https://leeyencheng129.github.io/portfolio/22_%E6%9D%8E%E5%BD%A5%E5%91%88bs/22_%E6%9D%8E%E5%BD%A5%E5%91%88.html">
+                                <figure><img src="images/ikea.png" alt=""></figure>
+                                <figcaption>ikea宜家家居</figcaption>
+                        </div>
+                        </a>
+
+                    </div>
+                    <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
+                        <div class="wrap">
+                            <a
+                                href="https://leeyencheng129.github.io/portfolio/22_%E6%9D%8E%E5%BD%A5%E5%91%88/game_ian">
+                                <figure><img src="images/mysuipa.png" alt=""></figure>
+                                <figcaption>マインスイーパ</figcaption>
+                            </a>
+
+                        </div>
+                    </div>
+                    <!-- <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="wrap">
                             <img src="https://fakeimg.pl/350x300/">
                         </div>
-                    </div>
+                    </div> -->
+
+
+
 
 
                 </div>
