--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -144,6 +144,7 @@
         figure img {
             width: 100px;
             height: 50px;
+
         }
 
         .space {
@@ -190,6 +191,7 @@
         .wrap img {
             width: 100%;
             height: 150px;
+            object-fit: cover;
         }
 
         .year {
