--- a/22_李彥呈bs/22_李彥呈.html
+++ b/22_李彥呈bs/22_李彥呈.html
@@ -343,6 +343,16 @@
 
 
         }
+
+        @media screen and (max-width: 893px) {
+            form img {
+                display: none !important;
+            }
+
+            form button {
+                display: none !important;
+            }
+        }
     </style>
 </head>
 
@@ -573,7 +583,7 @@
         <div class="container custom-container-width box ">
             <h3>精選推薦</h3>
             <div class="recommand">
-                <img src="/images/recommend .jpg" alt="">
+                <img src="images/recommend.jpg" alt="">
             </div>
         </div>
     </article>
