--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -472,7 +472,7 @@
                     <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
 
                         <div class="wrap">
-                            <a
+                            <a target="_blank"
                                 href="https://leeyencheng129.github.io/portfolio/22_%E6%9D%8E%E5%BD%A5%E5%91%88bs/22_%E6%9D%8E%E5%BD%A5%E5%91%88.html">
                                 <figure><img src="images/ikea.png" alt=""></figure>
                                 <figcaption>ikea宜家家居</figcaption>
@@ -482,7 +482,7 @@
                     </div>
                     <div class=" col-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="wrap">
-                            <a
+                            <a target="_blank"
                                 href="https://leeyencheng129.github.io/portfolio/22_%E6%9D%8E%E5%BD%A5%E5%91%88/game_ian">
                                 <figure><img src="images/mysuipa.png" alt=""></figure>
                                 <figcaption>マインスイーパ</figcaption>
