--- a/22_李彥呈bs/22_李彥呈.html
+++ b/22_李彥呈bs/22_李彥呈.html
@@ -353,6 +353,14 @@
                 display: none !important;
             }
         }
+
+        @media screen and (max-width: 375px) {
+            .sns span {
+                display: block;
+                width: 300px;
+                margin: 0 0 10px 45px;
+            }
+        }
     </style>
 </head>
 
