--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -18,7 +18,7 @@
         }
 
         body {
-            background: linear-gradient(#e5e5e5, transparent), linear-gradient(to top left, #90bcf5, transparent), linear-gradient(to top right, #f1e4bd, transparent);
+            background: linear-gradient(#ece7e5, transparent), linear-gradient(to top left, #aac7d8d8, transparent), linear-gradient(to top right, #c4baa194, transparent);
             background-blend-mode: soft-light;
             color: rgb(15, 28, 56);
 
