--- a/22-李彥呈css/profile.html
+++ b/22-李彥呈css/profile.html
@@ -18,8 +18,9 @@
         }
 
         body {
-            background: linear-gradient(#ece7e5, transparent), linear-gradient(to top left, #dfe8ec, transparent), linear-gradient(to top right, #f3f1eee0, transparent);
-            background-blend-mode: soft-light;
+            /* background: linear-gradient(#ece7e5, transparent), linear-gradient(to top left, #dfe8ec, transparent), linear-gradient(to top right, #f3f1eee0, transparent);
+            background-blend-mode: soft-light; */
+            background-color: #f1eee9;
             color: rgb(15, 28, 56);
 
 
